--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table>
     <tr>
-      <td><img src="images/me2.png" alt="despoina profile picture" /></td>
+      <td><img src="me2.png" alt="despoina profile picture" /></td>
       <td>
         <h1>Despoina Irakleous Palaiologou</h1>
         <p><em>Head Waiter at the <strong><a href="https://www.google.com/travel/hotels/Verina%20Astra%20Hotel/entity/CgoIqqLhp5mOn_dmEAE?q=verina%20astra&g2lb=2502548%2C2503771%2C2503781%2C4258168%2C4270442%2C4284970%2C4291517%2C4306835%2C4515404%2C4524133%2C4597339%2C4649665%2C4722900%2C4723331%2C4733969%2C4753751%2C4757164%2C4758493%2C4762561%2C4769473%2C4771573%2C4779393&hl=el-GR&gl=gr&ssta=1&rp=EKqi4aeZjp_3ZhCBuqSmiLTCyV84AkAASAKiARxWZXJpbmEgQXN0cmEgSG90ZWwsIHBvdWxhdGlzwAEDyAEA&ap=aAE&ictx=1&ved=0CAAQ5JsGahcKEwj4x8z1wOn3AhUAAAAAHQAAAAAQAw&utm_campaign=sharing&utm_medium=link&utm_source=htls&ts=CAESABogCgIaABIaEhQKBwjmDxAFGBkSBwjmDxAFGBoYATICEAAqCQoFOgNFVVIaAA">Verina Hotel</a> </strong>in Sifnos.</em></p>
